# gpu_llm_flash_attention

./: FlashAttention_empty.ipynb  README.md  pyproject.toml  test_and_submit.sh
benchmarking/: bench_softmax_matmul.py  submit_leaderboard.py
homework/: 01_softmax_matmul.md  02_flash_attention_pytorch.md  03_flash_attention_triton.md
online_softmax/: online_softmax.py
outputs/: softmax_matmul_benchmark.csv
softmax_matmul/: softmax_matmul.py
tests/: adapters.py  conftest.py  test_attention.py  test_flash_attention.py  test_flash_memory.py  test_online_softmax.py  test_softmax_matmul.py  test_triton_usage.py
utils/: open-notebook.sh
